# research

./: bash.exe.stackdump
docs/: 00_WORKSPACE_GUIDE.md
docs/10_Theory/RoomAcustics/: 정리.md
docs/30_DevLog/: 2025-11-20.md
docs/templates/: Algorithm_Spec.md
projects/TestRoom/: CMakeLists.txt  Spatializer.h  main.cpp
